--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"release": "changeset publish"
 	},
 	"type": "module",
-	"dependencies": {
-		"pocketbase": "0.21.5"
+	"peerDependencies": {
+		"pocketbase": "0.21.0"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.9",
