--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"type": "module",
 	"peerDependencies": {
-		"pocketbase": "^0.21.0 || ^0.22.0"
+		"pocketbase": ">=0.22.0 <0.26.0"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.9",
