--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,18 +5,24 @@ on:
         branches:
             - '**'
         paths-ignore:
-            - 'REAdME.md'
+            - 'README.md'
+            - 'CHANGELOG.md'
             - 'LICENSE'
             - '.github/**'
             - '.gitignore'
+            - '.prettierrc'
+            - '.prettierignore'
     pull_request:
         branches:
             - master
         paths-ignore:
-            - 'REAdME.md'
+            - 'README.md'
+            - 'CHANGELOG.md'
             - 'LICENSE'
             - '.github/**'
             - '.gitignore'
+            - '.prettierrc'
+            - '.prettierignore'
 
 jobs:
     test:
