--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "1.3.1",
 	"description": "Pocketbase SDK wrapper with more readable option syntax and better typings",
 	"author": "satohshi",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/satohshi/pocketbase-ts.git"
+	},
 	"keywords": [
 		"pocketbase",
 		"typescript",
