--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 	],
 	"scripts": {
 		"dev": "vitest --ui",
-		"build": "tsc",
-		"lint": "tsc --noEmit && prettier --check .",
+		"build": "tsgo",
+		"lint": "tsgo --noEmit && prettier --check .",
 		"format": "prettier --write .",
 		"test": "vitest run",
 		"release": "changeset publish"
@@ -34,6 +34,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.7",
+		"@typescript/native-preview": "7.0.0-dev.20251213.1",
 		"@vitest/ui": "^4.0.15",
 		"prettier": "^3.5.3",
 		"typescript": "^5.9.3",
