--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,8 @@ jobs:
                   version: latest
             - uses: actions/setup-node@v4
               with:
-                  node-version: 20
+                  node-version: 24
+                  registry-url: 'https://registry.npmjs.org'
                   cache: pnpm
 
             - run: pnpm install --frozen-lockfile
